# OBSCURA-PRIVACY

./: .gitignore  README.md
.kiro/steering/: product.md  structure.md  tech.md
Backend/darkOTC/: DARK_OTC_BACKEND_REQUIREMENTS.md  Dockerfile  FRONTEND_REQUIREMENTS_RESPONSE.md  QUOTE_COUNT_IMPLEMENTATION.md  RAILWAY_DEPLOYMENT.md  WHITELIST_MODE_GUIDE.md  WOTS_FIX_SUMMARY.md  WOTS_OWNERSHIP_GUIDE.md  obscura-llms.txt  requirements-old.md  test_backend_wots.mjs  test_cancel_with_different_keypair.mjs  test_full_rfq_flow.mjs  test_quote_count.mjs  wots-native.js
Backend/darkPool/docs/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_GUIDE.md  QUICKSTART.md  resources.md
Backend/darkSwap&Bridge/docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  resources.md
Backend/vault/: PRIVACY_ANALYSIS.md  RAILWAY_REDEPLOY_TRIGGER.txt  README.md  cyclops-llms.txt  index.html  obscura-dark-otc-rfq-llms.txt  obscura-llms.txt  package-lock.json  package.json  railway.json  simple-server.js
Backend/vault/backend/: .dockerignore  .env.example  .gitignore  .gitmodules  ARCIUM_INTEGRATION.md  DEPLOY_TRIGGER.txt  Dockerfile  GLOSSARY.md  LICENSE  README.md  WHITEPAPER.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.json
Backend/vault/backend/contracts/solana/programs/sip-settlement/: Cargo.toml
Backend/vault/backend/contracts/solana/programs/sip-settlement/src/: error.rs  instructions.rs  lib.rs  state.rs
Backend/vault/backend/contracts/solana/programs/sip-vault/: Cargo.toml
Backend/vault/backend/contracts/solana/programs/sip-vault/src/: error.rs  instructions.rs  lib.rs  state.rs
Backend/vault/backend/contracts/solana/trident-tests/fuzz_tests/fuzz_0/: Cargo.toml  test_fuzz.rs
Backend/vault/contracts/obscura_vault/: Anchor.toml  Cargo.toml  anchor_build.sh  build.sh  build2.sh  build_final.sh  build_native.sh  build_rust179.sh  build_v2.sh  build_with_bundled.sh  do_build.sh  final_build.sh  install_solana2.sh  native_build.sh  run_build.sh  sbf_build.sh
Backend/vault/contracts/obscura_vault/src/: lib.rs
Frontend/web/dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
Frontend/web/obscura-docs/: obscura-llms.txt
(+113 files in other folders)
