[package]
name = "obscura-vault"
version = "0.1.0"
description = "Obscura Privacy Vault - Solana Program for Private Claims"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obscura_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Anchor 0.27.0 - compatible with Rust 1.75
anchor-lang = "0.27.0"

# Pin versions to avoid edition2024 requirement
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
