[package]
name = "sip-settlement"
version = "0.1.0"
description = "Minimal SIP settlement program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sip_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-security-txt = "1.1.1"
