[package]
name = "fuzz_0"
version = "0.1.0"
edition = "2021"

[dependencies]
trident-fuzz = "0.11.1"
arbitrary = { version = "1.3", features = ["derive"] }
honggfuzz = "0.5"
anchor-lang = "0.30.0"

[dependencies.sip-settlement]
path = "../../../programs/sip-settlement"
features = ["no-entrypoint"]

[[bin]]
name = "fuzz_0"
path = "test_fuzz.rs"
